feat(KLVN-589): categories API (#23)
