# src/models/category.ts
@@ -1,0 +1,6 @@
+import { UUID } from 'src/types';
+
+export interface Category {
+  id: UUID;
+  name: string;
+}
