# src/models/index.ts
@@ -4,3 +4,4 @@ export * from './group';
 export * from './class';
 export * from './performance';
 export * from './student';
+export * from './category';
