# src/routes/v1/performances.ts
@@ -2,7 +2,7 @@ import express from 'express';
 import createError from 'http-errors';
 import PerformanceController from 'src/controllers/v1/performance';
 import { catchAsync } from 'src/utils';
-import { groupsSchema } from 'src/validations/requests';
+import { categoriesSchema, groupsSchema } from 'src/validations/requests';
 
 const router = express.Router();
 
@@ -56,6 +56,32 @@ router.get('/groups', async (req, res) => {
     return res.status(500).json({ message: `${err}` });
   }
 });
+
+router.get(
+  '/categories',
+  catchAsync(async (req, res) => {
+    const { error, value } = categoriesSchema.validate(req.query, {
+      abortEarly: false,
+    });
+    if (error) {
+      return res.status(400).json({
+        message: 'bad request',
+        errors: error.details.map(
+          (detail: { message: string }) => detail.message
+        ),
+      });
+    }
+
+    const performancesController = new PerformanceController();
+    const response = await performancesController.getPerformanceCategories(
+      value.classId,
+      value.timezone,
+      value.days
+    );
+
+    return res.status(200).json(response);
+  })
+);
 
 router.get('/skills', async (_, res) => {
   const performancesController = new PerformanceController();
